
Version 3.7.4. Released February 12, 2018 (git tag 3.7.4)

  - Fix typo in META.yml
    [CPAN ticket #124405]


Version 3.7.3. Released February 12, 2018 (git tag 3.7.3)

  - Test tweak so we don't try to use jsonb on older versions.
    [CPAN ticket #124934]


Version 3.7.2  Released February 11, 2018 (git tag 3.7.2)

  - Remove Data::Peek dependency accidentally left in t/12placeholders.t
    [CPAN ticket #124393]


Version 3.7.1  Released February 11, 2018 (git tag 3.7.1)

  - Fixed problem when using placeholders and escaped question marks, the recopied string 
    was not terminated correctly.
    [Greg Sabino Mullane]
    (Github issue #33, CPAN tickets #121630, #123187, #123999)

  - Make sure nulls in our self-generated arrays are not set as read-only in some Perls.
    [Greg Sabino Mullane]
    (CPAN ticket #107556)

  - If the server returns no error message, and an "unknown" code from libpq, supply a custom
    message mentioning client_min_messages may be to blame.
    [Greg Sabino Mullane]
    (CPAN ticket #109591)

  - Declare VERSION with 'our' in seldom-used Bundle module
    (CPAN ticket #123218)



Version 3.7.0  Released September 24, 2017 (git tag 3.7.0)

  - If no placeholders, use PQexec instead of PQexecParams
    [Greg Sabino Mullane]

  - Fix running tests with non-UTF8 server_encoding
    [Dagfinn Ilmari Mannsåker]
    (Github issue #26)

  - Fix crash with missing client_encoding
    [David Christensen, reported by Marko Tiikkaja]
    (Github issue #29)

  - Fix crash with missing server_version
    [David Christensen]

  - Fix leak in ->state methods
    [Dagfinn Ilmari Mannsåker]
    (Github issue #30)

  - Add $sth->{pg_async_status} to determine async status of a statement handle.
    Values can be 0 (no async), 1 (async), or -1 (cancelled)
    [Greg Sabino Mullane, as requested by Dmytro Zagashev (ZDM)]
    (CPAN ticket #116172)


Version 3.6.2  Released May 23, 2017 (git tag 3.6.2)

  - Remove errant debugging aid from test suite

